--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p id='ansC' class='ans'></p>
         <p id='ansD' class='ans'></p>
         <div id='wrongQs'></div>
-        <button id='next'>Next Question</button>
+        <button id='next'>Submit Answer</button>
         <p id='timeRem'></p>
     </div>
     <script src="assets/javascript/javascript.js"></script>
